test_data/end_to_end/err__import_fn_conflicting_overloads/stderr.txt
error: can't define function `f`: there are conflicting overloads
  --> main.cz:12:8
12 |     fn f() {}
            ~

error: can't import function `f`: there are conflicting overloads
  --> main.cz:17:13
17 |     use m2::f;
                 ~

error: can't define function `f`: there are conflicting overloads
  --> main.cz:19:8
19 |     fn f() {}
            ~

error: can't define function `f`: there are conflicting overloads
  --> main.cz:25:8
25 |     fn f() {}
            ~

error: couldn't find function `f::(x)`: none of existing functions matches the signature
  --> main.cz:34:5
34 |     f(x: 42); // OK
         ~~~~~~~~

error: `f` found in multiple wildcard imports
  --> main.cz:51:5
51 |     f();
         ~

error: `f` found in multiple wildcard imports
  --> main.cz:52:5
52 |     f(x: 42);
         ~
